// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addPrice 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "base": Object {
          "S": "base",
        },
        "close": Object {
          "N": "3",
        },
        "high": Object {
          "N": "4",
        },
        "low": Object {
          "N": "0",
        },
        "open": Object {
          "N": "2",
        },
        "quote": Object {
          "S": "quote",
        },
        "quoteBaseTimestamp": Object {
          "S": "quote|base|1234567890",
        },
        "sourceDateHour": Object {
          "S": "source|1970-01-15-06",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "volume": Object {
          "N": "5",
        },
      },
      "TableName": "duo.prices.1.live",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "base": Object {
          "S": "base",
        },
        "close": Object {
          "N": "3",
        },
        "high": Object {
          "N": "4",
        },
        "low": Object {
          "N": "0",
        },
        "open": Object {
          "N": "2",
        },
        "quote": Object {
          "S": "quote",
        },
        "quoteBaseTimestamp": Object {
          "S": "quote|base|1234567890",
        },
        "sourceDateHour": Object {
          "S": "source|1970-01-15-06",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "volume": Object {
          "N": "5",
        },
      },
      "TableName": "duo.prices.10.live",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "base": Object {
          "S": "base",
        },
        "close": Object {
          "N": "3",
        },
        "high": Object {
          "N": "4",
        },
        "low": Object {
          "N": "0",
        },
        "open": Object {
          "N": "2",
        },
        "quote": Object {
          "S": "quote",
        },
        "quoteBaseTimestamp": Object {
          "S": "quote|base|1234567890",
        },
        "sourceDate": Object {
          "S": "source|1970-01-15",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "volume": Object {
          "N": "5",
        },
      },
      "TableName": "duo.prices.60.live",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "base": Object {
          "S": "base",
        },
        "close": Object {
          "N": "3",
        },
        "high": Object {
          "N": "4",
        },
        "low": Object {
          "N": "0",
        },
        "open": Object {
          "N": "2",
        },
        "quote": Object {
          "S": "quote",
        },
        "quoteBaseTimestamp": Object {
          "S": "quote|base|1234567890",
        },
        "sourceYearMonth": Object {
          "S": "source|1970-01",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "volume": Object {
          "N": "5",
        },
      },
      "TableName": "duo.prices.360.live",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "base": Object {
          "S": "base",
        },
        "close": Object {
          "N": "3",
        },
        "high": Object {
          "N": "4",
        },
        "low": Object {
          "N": "0",
        },
        "open": Object {
          "N": "2",
        },
        "quote": Object {
          "S": "quote",
        },
        "quoteBaseTimestamp": Object {
          "S": "quote|base|1234567890",
        },
        "sourceYearMonth": Object {
          "S": "source|1970-01",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "volume": Object {
          "N": "5",
        },
      },
      "TableName": "duo.prices.1440.live",
    },
  ],
  Array [
    Object {
      "Item": Object {
        "base": Object {
          "S": "base",
        },
        "close": Object {
          "N": "3",
        },
        "high": Object {
          "N": "4",
        },
        "low": Object {
          "N": "0",
        },
        "open": Object {
          "N": "2",
        },
        "quote": Object {
          "S": "quote",
        },
        "quoteBaseTimestamp": Object {
          "S": "quote|base|1234567890",
        },
        "sourceYearMonth": Object {
          "S": "source|1970-01",
        },
        "updatedAt": Object {
          "N": "1234567890",
        },
        "volume": Object {
          "N": "5",
        },
      },
      "TableName": "duo.prices.1440.dev",
    },
  ],
]
`;

exports[`addPrice 2`] = `[Error: invalid period]`;

exports[`connection initalization 1`] = `[TypeError: _this.ddb.putItem is not a function]`;

exports[`convertEventToDynamo 1`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "contractAddress|type|1970-01-15",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "test": Object {
    "S": "test",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertEventToDynamo 2`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|CommitPrice|1970-01-15",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "sender": Object {
    "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertEventToDynamo 3`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Create|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "sender": Object {
    "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertEventToDynamo 4`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Transfer|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "from": Object {
    "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertEventToDynamo 5`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Approval|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "tokenOwner": Object {
    "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertEventToDynamo 6`] = `
Object {
  "blockHash": Object {
    "S": "blockHash",
  },
  "blockNumber": Object {
    "N": "123",
  },
  "eventKey": Object {
    "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|TotalSupply|1970-01-06",
  },
  "logStatus": Object {
    "S": "logStatus",
  },
  "sender": Object {
    "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
  },
  "systime": Object {
    "N": "9876543210",
  },
  "timestampId": Object {
    "S": "1234567890|id",
  },
  "transactionHash": Object {
    "S": "txHash",
  },
}
`;

exports[`convertTradeToDynamo 1`] = `
Object {
  "amount": Object {
    "N": "456",
  },
  "pair": Object {
    "S": "quote|base",
  },
  "price": Object {
    "N": "123",
  },
  "quoteBaseId": Object {
    "S": "quote|base|id",
  },
  "systime": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
}
`;

exports[`deleteData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`deleteData error 1`] = `Object {}`;

exports[`deleteData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`deleteUIConversionEvent 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "eventKey": Object {
          "S": "contractAddress|type|0x0",
        },
        "transactionHash": Object {
          "S": "txHash",
        },
      },
      "TableName": "duo.uiEvents.live",
    },
  ],
]
`;

exports[`deleteUIConversionEvent, dev 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "eventKey": Object {
          "S": "contractAddress|type|0x0",
        },
        "transactionHash": Object {
          "S": "txHash",
        },
      },
      "TableName": "duo.uiEvents.dev",
    },
  ],
]
`;

exports[`getPriceKeyField 1`] = `"invalid period"`;

exports[`getPrices 1`] = `
Array [
  Array [
    "anySrc",
    1,
    1538956680000,
    "",
  ],
  Array [
    "anySrc",
    1,
    1538956680000,
    "",
  ],
  Array [
    "anySrc",
    1,
    1538956800000,
    "",
  ],
  Array [
    "anySrc",
    1,
    1538956680000,
    "ETH|USD",
  ],
  Array [
    "anySrc",
    1,
    1538956800000,
    "ETH|USD",
  ],
  Array [
    "anySrc",
    60,
    1538956680000,
    "",
  ],
  Array [
    "anySrc",
    60,
    1538956800000,
    "",
  ],
]
`;

exports[`getSingleKeyPeriodPrices 1`] = `Array []`;

exports[`getSingleKeyPeriodPrices, dev 1`] = `
Array [
  Object {
    "base": undefined,
    "close": 100,
    "high": 100,
    "low": 100,
    "open": 100,
    "period": 0,
    "quote": "",
    "source": "",
    "timestamp": 1234567890000,
    "volume": 12,
  },
]
`;

exports[`getSingleKeyPeriodPrices, dev 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|z",
    },
    ":sourceDateHourMinute": Object {
      "S": "source|2009-02-13-23-31",
    },
    ":start": Object {
      "S": "quote|base|",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute AND quoteBaseId BETWEEN :start AND :end",
  "TableName": "duo.trades.dev",
}
`;

exports[`getSingleKeyPeriodPrices, dev 3`] = `
Array [
  Object {
    "base": "base",
    "close": 110,
    "high": 120,
    "low": 80,
    "open": 100,
    "period": 1,
    "quote": "quote",
    "source": "source",
    "timestamp": 1234567890000,
    "volume": 20000,
  },
]
`;

exports[`getSingleKeyPeriodPrices, dev 4`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|0",
    },
    ":primaryValue": Object {
      "S": "source|2009-02-13-23",
    },
    ":start": Object {
      "S": "quote|base|1234567890000",
    },
  },
  "KeyConditionExpression": "sourceDateHour = :primaryValue AND quoteBaseTimestamp BETWEEN :start AND :end",
  "TableName": "duo.prices.1.live",
}
`;

exports[`getSingleKeyPeriodPrices, no data 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|z",
    },
    ":sourceDateHourMinute": Object {
      "S": "source|2009-02-13-23-31",
    },
    ":start": Object {
      "S": "quote|base|",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute AND quoteBaseId BETWEEN :start AND :end",
  "TableName": "duo.trades.live",
}
`;

exports[`getSingleKeyPeriodPrices, period = 0 1`] = `
Array [
  Object {
    "base": "Base",
    "close": 100,
    "high": 100,
    "low": 100,
    "open": 100,
    "period": 0,
    "quote": "quote",
    "source": "source",
    "timestamp": 1234567890000,
    "volume": 12,
  },
]
`;

exports[`getSingleKeyPeriodPrices, period = 0 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|z",
    },
    ":sourceDateHourMinute": Object {
      "S": "source|2009-02-13-23-31",
    },
    ":start": Object {
      "S": "quote|base|",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute AND quoteBaseId BETWEEN :start AND :end",
  "TableName": "duo.trades.live",
}
`;

exports[`getSingleKeyPeriodPrices, period = 0, no pair 1`] = `
Array [
  Object {
    "base": "Base",
    "close": 100,
    "high": 100,
    "low": 100,
    "open": 100,
    "period": 0,
    "quote": "quote",
    "source": "source",
    "timestamp": 1234567890000,
    "volume": 12,
  },
]
`;

exports[`getSingleKeyPeriodPrices, period = 0, no pair 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHourMinute": Object {
      "S": "source|2009-02-13-23-31",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute",
  "TableName": "duo.trades.dev",
}
`;

exports[`getSingleKeyPeriodPrices, period = 1 1`] = `
Array [
  Object {
    "base": "base",
    "close": 110,
    "high": 120,
    "low": 80,
    "open": 100,
    "period": 1,
    "quote": "quote",
    "source": "source",
    "timestamp": 1234567890000,
    "volume": 20000,
  },
]
`;

exports[`getSingleKeyPeriodPrices, period = 1 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|0",
    },
    ":primaryValue": Object {
      "S": "source|2009-02-13-23",
    },
    ":start": Object {
      "S": "quote|base|1234567890000",
    },
  },
  "KeyConditionExpression": "sourceDateHour = :primaryValue AND quoteBaseTimestamp BETWEEN :start AND :end",
  "TableName": "duo.prices.1.dev",
}
`;

exports[`getSingleKeyPeriodPrices, period = 60 1`] = `
Array [
  Object {
    "base": "",
    "close": 110,
    "high": 120,
    "low": 80,
    "open": 100,
    "period": 60,
    "quote": "",
    "source": "",
    "timestamp": NaN,
    "volume": 20000,
  },
]
`;

exports[`getSingleKeyPeriodPrices, period = 60 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|0",
    },
    ":primaryValue": Object {
      "S": "source|2009-02-13",
    },
    ":start": Object {
      "S": "quote|base|1234567890000",
    },
  },
  "KeyConditionExpression": "sourceDate = :primaryValue AND quoteBaseTimestamp BETWEEN :start AND :end",
  "TableName": "duo.prices.60.live",
}
`;

exports[`getSingleKeyPeriodPrices, period > 60 1`] = `[TypeError: Cannot read property 'S' of undefined]`;

exports[`getSingleKeyPeriodPrices, period invalid 1`] = `[Error: invalid period]`;

exports[`getTrades 1`] = `
Array [
  Object {
    "amount": 10,
    "base": "base",
    "id": "Id",
    "price": 120,
    "quote": "quote",
    "source": "2018-10-01",
    "timestamp": 1234567890000,
  },
]
`;

exports[`getTrades 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|z",
    },
    ":sourceDateHourMinute": Object {
      "S": "source|2018-10-01|01|01",
    },
    ":start": Object {
      "S": "quote|base|",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute AND quoteBaseId BETWEEN :start AND :end",
  "TableName": "duo.trades.live",
}
`;

exports[`getTrades, invalid type 1`] = `
Array [
  Object {
    "amount": 10,
    "base": undefined,
    "id": undefined,
    "price": 120,
    "quote": "",
    "source": "",
    "timestamp": 1234567890000,
  },
]
`;

exports[`getTrades, invalid type 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":end": Object {
      "S": "quote|base|z",
    },
    ":sourceDateHourMinute": Object {
      "S": "source|2018-10-01|01|01",
    },
    ":start": Object {
      "S": "quote|base|",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute AND quoteBaseId BETWEEN :start AND :end",
  "TableName": "duo.trades.dev",
}
`;

exports[`getTrades, no pair 1`] = `
Array [
  Object {
    "amount": 10,
    "base": "base",
    "id": "Id",
    "price": 120,
    "quote": "quote",
    "source": "2018-10-01",
    "timestamp": 1234567890000,
  },
]
`;

exports[`getTrades, no pair 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHourMinute": Object {
      "S": "source|2018-10-01|01|01",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute",
  "TableName": "duo.trades.live",
}
`;

exports[`getTrades, no pair 3`] = `
Array [
  Object {
    "amount": 10,
    "base": "base",
    "id": "Id",
    "price": 120,
    "quote": "quote",
    "source": "2018-10-01",
    "timestamp": 1234567890000,
  },
]
`;

exports[`getTrades, no pair 4`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHourMinute": Object {
      "S": "source|2018-10-01|01|01",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute",
  "TableName": "duo.trades.dev",
}
`;

exports[`getTrades, no trade 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHourMinute": Object {
      "S": "source|2018-10-01|01|01",
    },
  },
  "KeyConditionExpression": "sourceDateHourMinute = :sourceDateHourMinute",
  "TableName": "duo.trades.dev",
}
`;

exports[`init 1`] = `
Array [
  Array [
    "config",
  ],
]
`;

exports[`insertData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`insertData error 1`] = `Object {}`;

exports[`insertData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`insertEventsData 1`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "contractAddress|type|1970-01-15",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "test": Object {
      "S": "test",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData 2`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|CommitPrice|1970-01-15",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData 3`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Create|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData 4`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Transfer|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "from": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData 5`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Approval|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "tokenOwner": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData 6`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|TotalSupply|1970-01-06",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.dev",
}
`;

exports[`insertEventsData live 1`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "contractAddress|type|1970-01-15",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "test": Object {
      "S": "test",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.live",
}
`;

exports[`insertEventsData live 2`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|CommitPrice|1970-01-15",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.live",
}
`;

exports[`insertEventsData live 3`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Create|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.live",
}
`;

exports[`insertEventsData live 4`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Transfer|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "from": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.live",
}
`;

exports[`insertEventsData live 5`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|Approval|1970-01-15|0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "tokenOwner": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.live",
}
`;

exports[`insertEventsData live 6`] = `
Object {
  "Item": Object {
    "blockHash": Object {
      "S": "blockHash",
    },
    "blockNumber": Object {
      "N": "123",
    },
    "eventKey": Object {
      "S": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309|TotalSupply|1970-01-06",
    },
    "logStatus": Object {
      "S": "logStatus",
    },
    "sender": Object {
      "S": "0x00D8d0660b243452fC2f996A892D3083A903576F",
    },
    "systime": Object {
      "N": "0",
    },
    "timestampId": Object {
      "S": "1234567890|id",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "duo.events.live",
}
`;

exports[`insertHeartbeat 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "process": Object {
          "S": "process",
        },
        "timestamp": Object {
          "N": "0",
        },
      },
      "TableName": "duo.status.dev",
    },
  ],
]
`;

exports[`insertHeartbeat error 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "process": Object {
          "S": "process",
        },
        "timestamp": Object {
          "N": "0",
        },
      },
      "TableName": "duo.status.live",
    },
  ],
]
`;

exports[`insertStatusData 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "process": Object {
          "S": "process",
        },
        "test": "test",
      },
      "TableName": "duo.status.dev",
    },
  ],
]
`;

exports[`insertStatusData error 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "process": Object {
          "S": "process",
        },
        "test": "test",
      },
      "TableName": "duo.status.live",
    },
  ],
]
`;

exports[`insertTradeData 1`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "pair": Object {
      "S": "quote|base",
    },
    "price": Object {
      "N": "123",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "sourceDateHourMinute": Object {
      "S": "src|1970-01-15-06-56",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.trades.live",
}
`;

exports[`insertTradeData 2`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "pair": Object {
      "S": "quote|base",
    },
    "price": Object {
      "N": "123",
    },
    "process": Object {
      "S": "process",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.status.live",
}
`;

exports[`insertTradeData dev 1`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "pair": Object {
      "S": "quote|base",
    },
    "price": Object {
      "N": "123",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "sourceDateHourMinute": Object {
      "S": "src|1970-01-15-06-56",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.trades.dev",
}
`;

exports[`insertTradeData dev 2`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "pair": Object {
      "S": "quote|base",
    },
    "price": Object {
      "N": "123",
    },
    "process": Object {
      "S": "process",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.status.dev",
}
`;

exports[`insertTradeData insertStatus 1`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "pair": Object {
      "S": "quote|base",
    },
    "price": Object {
      "N": "123",
    },
    "quoteBaseId": Object {
      "S": "quote|base|id",
    },
    "sourceDateHourMinute": Object {
      "S": "src|1970-01-15-06-56",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "duo.trades.dev",
}
`;

exports[`insertUIConversion 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "eth": Object {
          "N": "123",
        },
        "eventKey": Object {
          "S": "0x0|Create|0x0",
        },
        "fee": Object {
          "N": "0.123",
        },
        "systime": Object {
          "N": "1234567890",
        },
        "tokenA": Object {
          "N": "456",
        },
        "tokenB": Object {
          "N": "456",
        },
        "transactionHash": Object {
          "S": "0x123",
        },
      },
      "TableName": "duo.uiEvents.dev",
    },
  ],
]
`;

exports[`insertUIConversion, live 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "eth": Object {
          "N": "123",
        },
        "eventKey": Object {
          "S": "0x0|Redeem|0x0",
        },
        "fee": Object {
          "N": "0.123",
        },
        "systime": Object {
          "N": "1234567890",
        },
        "tokenA": Object {
          "N": "456",
        },
        "tokenB": Object {
          "N": "456",
        },
        "transactionHash": Object {
          "S": "0x123",
        },
      },
      "TableName": "duo.uiEvents.live",
    },
  ],
]
`;

exports[`parseAcceptedPrices 1`] = `
Array [
  Object {
    "blockNumber": 7722428,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529625600000,
    "transactionHash": "0x180245f592adfd86dfb49a48c6c9b59d6be7a8d9c897ebd5492f0823c5196008",
  },
  Object {
    "blockNumber": 7722781,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529629200000,
    "transactionHash": "0x4da754a05a29dd84a26a81db5a6d437be018971c652a94d0c706128bad63dc87",
  },
  Object {
    "blockNumber": 7723130,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529632800000,
    "transactionHash": "0x298dc4d2771805df61894777a6a2eee702d222ab51c1c5239d890d66412b64e0",
  },
  Object {
    "blockNumber": 7723483,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529636400000,
    "transactionHash": "0xef0aab40c21251ddbed21d03f43f81a0e000b651a355dc2e0ac6bdd2934e449d",
  },
  Object {
    "blockNumber": 7723836,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529640000000,
    "transactionHash": "0x060f2496b45b7d11908549bb4e3e1a6cc789692caf24c9f632daf5e23ce3a481",
  },
]
`;

exports[`parseAcceptedPrices, invalid type 1`] = `
Array [
  Object {
    "blockNumber": 7722428,
    "contractAddress": "",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529625600000,
    "transactionHash": "",
  },
]
`;

exports[`parseAcceptedPrices, invalid type 2`] = `
Array [
  Object {
    "blockNumber": 7722428,
    "contractAddress": "",
    "navA": 0,
    "navB": 0,
    "price": 0,
    "timestamp": 1529625600000,
    "transactionHash": "",
  },
]
`;

exports[`parseConversion 1`] = `
Array [
  Object {
    "blockNumber": 7715602,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "eth": 0,
    "fee": 0,
    "timestamp": 1529559912000,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "0x7283db82115b77c3fa055ec1553acf7c16d3ba1e2db5b2cea1974ba32bad29dc",
    "type": "Create",
  },
  Object {
    "blockNumber": 7715602,
    "contractAddress": "",
    "eth": 0,
    "fee": 0,
    "timestamp": 0,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "",
    "type": "",
  },
]
`;

exports[`parseStatus 1`] = `
Array [
  Object {
    "process": "",
    "timestamp": 1527757500018,
  },
  Object {
    "process": "EVENT_AWS_PRIVATE_STARTPRERESET",
    "timestamp": 1527751553589,
  },
  Object {
    "process": "EVENT_AWS_PRIVATE_STARTRESET",
    "timestamp": 1527751833800,
  },
  Object {
    "block": 7535634,
    "process": "EVENT_AWS_PUBLIC_OTHERS",
    "timestamp": 1527846160749,
  },
  Object {
    "process": "EVENT_AZURE_PRIVATE_STARTPRERESET",
    "timestamp": 1527752331975,
  },
  Object {
    "process": "EVENT_AZURE_PRIVATE_STARTRESET",
    "timestamp": 1527751947443,
  },
  Object {
    "process": "EVENT_GCP_PRIVATE_STARTPRERESET",
    "timestamp": 1527752140470,
  },
  Object {
    "process": "EVENT_GCP_PRIVATE_STARTRESET",
    "timestamp": 1527752036379,
  },
  Object {
    "process": "FEED_AWS_PRIVATE",
    "timestamp": 1527851700049,
  },
  Object {
    "process": "FEED_AZURE_PRIVATE",
    "timestamp": 1527758100003,
  },
  Object {
    "process": "HOURLY_AWS_PUBLIC",
    "timestamp": 1528081753755,
  },
  Object {
    "process": "MINUTELY_AWS_PUBLIC",
    "timestamp": 1528081764433,
  },
  Object {
    "price": 573.84,
    "process": "TRADE_AWS_PRIVATE_BITFINEX",
    "timestamp": 1527831872000,
    "volume": 2,
  },
  Object {
    "price": 568.74,
    "process": "TRADE_AWS_PRIVATE_GDAX",
    "timestamp": 1527756997255,
    "volume": 0.112,
  },
  Object {
    "price": 568.9,
    "process": "TRADE_AWS_PRIVATE_GEMINI",
    "timestamp": 1527757021801,
    "volume": 0.034274,
  },
  Object {
    "price": 567.99,
    "process": "TRADE_AWS_PRIVATE_KRAKEN",
    "timestamp": 1527756882730,
    "volume": 1.3,
  },
  Object {
    "price": 617.38,
    "process": "TRADE_AWS_PUBLIC_BITFINEX",
    "timestamp": 1528081780000,
    "volume": 1.608,
  },
  Object {
    "price": 616.14,
    "process": "TRADE_AWS_PUBLIC_GDAX",
    "timestamp": 1528081164613,
    "volume": 6.52551355,
  },
  Object {
    "price": 617.67,
    "process": "TRADE_AWS_PUBLIC_GEMINI",
    "timestamp": 1528081767414,
    "volume": 0.021854,
  },
  Object {
    "price": 617.85,
    "process": "TRADE_AWS_PUBLIC_KRAKEN",
    "timestamp": 1528081700549,
    "volume": 1.13,
  },
  Object {
    "price": 569.89,
    "process": "TRADE_AZURE_PRIVATE_BITFINEX",
    "timestamp": 1527757209000,
    "volume": 0.02548273,
  },
  Object {
    "price": 569.09,
    "process": "TRADE_AZURE_PRIVATE_GDAX",
    "timestamp": 1527757217889,
    "volume": 0.69683,
  },
  Object {
    "price": 569.01,
    "process": "TRADE_AZURE_PRIVATE_GEMINI",
    "timestamp": 1527757197779,
    "volume": 0.714947,
  },
  Object {
    "price": 569.3,
    "process": "TRADE_AZURE_PRIVATE_KRAKEN",
    "timestamp": 1527757210567,
    "volume": 0.29453729,
  },
  Object {
    "price": 575.97,
    "process": "TRADE_GCP_PRIVATE_BITFINEX",
    "timestamp": 1527766704000,
    "volume": 5.16121098,
  },
  Object {
    "price": 575,
    "process": "TRADE_GCP_PRIVATE_GDAX",
    "timestamp": 1527766704262,
    "volume": 0.7576,
  },
  Object {
    "price": 575.41,
    "process": "TRADE_GCP_PRIVATE_GEMINI",
    "timestamp": 1527766669797,
    "volume": 0.005219,
  },
  Object {
    "price": 575.04,
    "process": "TRADE_GCP_PRIVATE_KRAKEN",
    "timestamp": 1527766688094,
    "volume": 0.2,
  },
]
`;

exports[`parseTotalSupply 1`] = `
Array [
  Object {
    "blockNumber": 7650502,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "timestamp": 1528862200000,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "0xd7c9bf35f925a8353032cfe1178439617997d6e27484465d393de3d38f8331ab",
  },
  Object {
    "blockNumber": 7651095,
    "contractAddress": "",
    "timestamp": 0,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "",
  },
]
`;

exports[`parseUIConversion 1`] = `
Array [
  Object {
    "blockNumber": 0,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "eth": 0.21704519241528358,
    "fee": 0.0021704519241528357,
    "pending": true,
    "timestamp": 1529317121530,
    "tokenA": 36.9599025612444,
    "tokenB": 36.9599025612444,
    "transactionHash": "0x8e59dff2458a76b2ba0a9e11413e603cddc227d663a8bf7b45e0241f3896424d",
    "type": "Create",
  },
  Object {
    "blockNumber": 0,
    "contractAddress": "",
    "eth": 0.21704519241528358,
    "fee": 0.0021704519241528357,
    "pending": true,
    "timestamp": 1529317121530,
    "tokenA": 36.9599025612444,
    "tokenB": 36.9599025612444,
    "transactionHash": "",
    "type": "",
  },
]
`;

exports[`parseUIConversion 2`] = `
Array [
  Object {
    "blockNumber": 0,
    "contractAddress": "0x0f80F055c7482b919183EcD06e0dd5FD7991D309",
    "eth": 0.20051663085602844,
    "fee": NaN,
    "pending": true,
    "timestamp": 1529317783500,
    "tokenA": 34.14530889109876,
    "tokenB": 34.14530889109876,
    "transactionHash": "0x94ea38c42188eaacfa75ad0a091866b46f4c75993d33c94c8cc22822433ca244",
    "type": "Redeem",
  },
  Object {
    "blockNumber": 0,
    "contractAddress": "",
    "eth": 0.20051663085602844,
    "fee": NaN,
    "pending": true,
    "timestamp": 0,
    "tokenA": 34.14530889109876,
    "tokenB": 34.14530889109876,
    "transactionHash": "",
    "type": "",
  },
]
`;

exports[`queryAcceptPriceEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|AcceptPrice|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryAcceptPriceEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|AcceptPrice|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryAcceptPriceEvent, dev 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|AcceptPrice|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryAcceptPriceEvent, dev 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|AcceptPrice|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryConversionEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Create|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryConversionEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Redeem|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryConversionEvent 3`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Create|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryConversionEvent 4`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Redeem|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryConversionEvent, dev 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Create|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryConversionEvent, dev 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Redeem|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryConversionEvent, dev 3`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Create|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryConversionEvent, dev 4`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Redeem|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`queryData error 1`] = `Object {}`;

exports[`queryData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`queryTotalSupplyEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|TotalSupply|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryTotalSupplyEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|TotalSupply|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.dev",
}
`;

exports[`queryTotalSupplyEvent, live 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|TotalSupply|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryTotalSupplyEvent, live 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|TotalSupply|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.events.live",
}
`;

exports[`queryUIConversionEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Create|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.uiEvents.dev",
}
`;

exports[`queryUIConversionEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "0x0|Redeem|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "duo.uiEvents.dev",
}
`;

exports[`readLastBlock 1`] = `1000000`;

exports[`readLastBlock 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":process": Object {
      "S": "EVENT_AWS_PUBLIC_OTHERS",
    },
  },
  "KeyConditionExpression": "process = :process",
  "TableName": "duo.status.live",
}
`;

exports[`readLastBlock, dev 1`] = `1000000`;

exports[`readLastBlock, dev 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":process": Object {
      "S": "EVENT_AWS_PUBLIC_OTHERS",
    },
  },
  "KeyConditionExpression": "process = :process",
  "TableName": "duo.status.dev",
}
`;

exports[`readLastBlock, no Item 1`] = `0`;

exports[`readLastBlock, no Item 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":process": Object {
      "S": "EVENT_AWS_PUBLIC_OTHERS",
    },
  },
  "KeyConditionExpression": "process = :process",
  "TableName": "duo.status.live",
}
`;

exports[`scanData 1`] = `
Array [
  Array [
    Object {},
    [Function],
  ],
]
`;

exports[`scanData error 1`] = `Object {}`;

exports[`scanData no ddb 1`] = `"dynamo db connection is not initialized"`;

exports[`scanStatus 1`] = `
Object {
  "TableName": "duo.status.dev",
}
`;

exports[`scanStatus, live 1`] = `
Object {
  "TableName": "duo.status.live",
}
`;
